--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
  }
 body {
     font-family: 'Nunito', sans-serif;
+    background-color: rgba(122, 122, 122, 0.665);
  }
 button,
  select {
@@ -40,7 +41,9 @@ img {
  }
 .main--products {
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
+  width: 100%;
+  margin-top: 5rem;
  }
 .main--cart {
   flex-flow: column nowrap;
@@ -60,16 +63,13 @@ img {
 .header__price-box {
     text-align: right;
  }
-.nav {
-  display: flex;
-  justify-content: flex-end;
-  gap: 0.5em;
- }
+
 .footer {
     flex-grow: 1;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-end;
+    align-items: center;
  }
 .product {
     width: 90%;
@@ -108,7 +108,7 @@ img {
     flex-flow: column;
     gap: 1em;
  }
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 700px) {
     .product {
         width: 30%;
     }
