--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -26,4 +26,22 @@
     font-size: 1.2rem;
     line-height: 1.5;
     margin: .5rem;
+    text-align: center;
+}
+
+.backToProducts-btn {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 1rem;
+    padding: .5rem 1rem;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.backToProducts-btn:hover {
+    background-color: #665422;
+    color: #fff;
+    transition: all .3s ease-in-out;
 }
