--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
  }
 body {
     font-family: 'Nunito', sans-serif;
-    background-color: rgba(122, 122, 122, 0.665);
+    background-color: rgba(246, 221, 61, 0.665);
  }
 button,
  select {
@@ -108,6 +108,11 @@ img {
     flex-flow: column;
     gap: 1em;
  }
+
+ .cart__submit:hover {
+    background-color: rgb(0, 255, 0);
+    border-radius: 10px;
+ }
 @media screen and (min-width: 700px) {
     .product {
         width: 30%;
@@ -120,6 +125,8 @@ img {
     }
    .cart__submit {
         max-width: 300px;
+        border: none;  
+        border-radius: 10px;
     }
  }
 
